# SmritiQA

./: .replit  README.md  SECURITY_IMPLEMENTATION_REPORT.md  add_password_hash.py  add_updated_at_to_users.py  alembic.ini  app.py  asgi_adapter.py  batch_process_edges.py  batch_process_nodes.py  cookies.txt  cosine_similarity_analysis.py  current_reflections.html  debug_auth_issue.py  debug_oauth_production.py  flask_proxy.py  gunicorn.conf.py  init_db.py  list_api_routes.py  main.py  migrate_feedback_column.py  migrate_schema.py  performance_optimization_plan.md  process_user_nodes.py  pyproject.toml  replit.md  reset_jd_password.py  reset_test_user_password.py  server.py  start_fastapi.py  sync_to_prod.sh  test_actual_test7_issue.py  test_audio_language_integration.py  test_batch_process_edges.py  test_complete_auth_flow.py  test_complete_privacy_implementation.py  test_create_diverse_edges.py  test_direct.py  test_diverse_edges.py  test_diverse_edges_flow.py  (+47 more)
SmritiProd/: README.md
app/: __init__.py  config.py  main.py
attached_assets/: Pasted--1-API-Endpoint-Which-One-to-Use-You-already-have-POST-generate-reflection-process-returns-1751183453723_1751183453725.txt  Pasted--1-API-Endpoint-Which-One-to-Use-You-already-have-POST-generate-reflection-process-returns-1751183574966_1751183574967.txt  Pasted--1-Configuration-Centralization-Create-a-central-AUTH-CONFIG-object-for-token-expiry-settings--1751871179155_1751871179155.txt  Pasted--1-Cookie-Expiry-Alignment-Should-cookie-max-age-match-actual-token-expiry-Recommendation--1751870975003_1751870975004.txt  (+71 more)
(+86 files in other folders)
